--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons.min.css">
+
 
   <!-- add to homescreen for ios -->
   <meta name="mobile-web-app-capable" content="yes" />
