build para correcion de rutas

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-6WTIRN2T.js" type="module"></script><script src="main-F5QVKV2L.js" type="module"></script></body>
+<script src="polyfills-6WTIRN2T.js" type="module"></script><script src="main-Q3OU5YAI.js" type="module"></script></body>
 
 </html>
